Add content and styles of instituto fundador escritos single

--- a/instituto-fundador-escritos-single.html
+++ b/instituto-fundador-escritos-single.html
@@ -453,7 +453,8 @@
                 <li class="breadcrumb-item"><a href="index.html">HOME</a></li>
                 <li class="breadcrumb-item"><a href="instituto-marista.html">INSTITUTO MARISTA</a></li>
                 <li class="breadcrumb-item"><a href="instituto-fundador.html">FUNDADOR</a></li>
-                <li class="breadcrumb-item active" aria-current="page">ESCRITOS PARA MARCELINO</li>
+                <li class="breadcrumb-item"><a href="instituto-fundador-escritos.html">ESCRITOS PARA MARCELINO</a></li>
+                <li class="breadcrumb-item active" aria-current="page">SINGLE</li>
               </ol>
             </nav>
           </div>
@@ -483,127 +484,170 @@
         <div class="row">
           <div class="col-12">
             <div class="mc-institute__section">
-              <div class="mc-institute__history">
+              <article class="mc-single mc-institute__history">
                 <div class="row">
                   <div class="col-12">
                     <h2 class="main-title main-title--space30">ESCRITOS PARA MARCELINO</h2>
-                    <div class="mc-search mc-search--space100">
-                      <div class="row align-items-center">
-                        <div class="col-12 col-sm-6">
-                          <div class="form-group mc-search__select">
-                            <label for="">CARTAS</label>
-                            <select name="" id="">
-                              <option value="">Todas as cartas</option>
-                              <option value="">Todas as cartas</option>
-                            </select>
-                          </div>
-                        </div>
-                        <div class="col-12 col-sm-4">
-                          <div class="form-group mc-search__select">
-                            <label for="">ANO</label>
-                            <select name="" id="">
-                              <option value="">Selecione</option>
-                              <option value="">Todas as cartas</option>
-                            </select>
-                          </div>
-                        </div>
-                        <div class="col-12 col-sm-2">
-                          <a href="" class="mc-search__button">
-                            <i class="fa fa-search" aria-hidden="true"></i>
-                          </a>
+                  </div>
+                  <div class="col-12">
+                    <div class="row align-items-center">
+                      <div class="col-12 col-md-6">
+                        <h3 class="main-subtitle main-subtitle--blue-dark main-subtitle--space30">
+                          Sr. Etienne-François Clérimbert 15/09/1823
+                        </h3>
+                      </div>
+                      <div class="col-12 col-md-6">
+                        <div class="form-group mc-search__select ml-auto">
+                          <label for="">IDIOMA</label>
+                          <select name="" id="">
+                            <option value="">Português</option>
+                            <option value="">Português</option>
+                          </select>
                         </div>
                       </div>
                     </div>
                   </div>
                   <div class="col-12">
-                    <div class="mc-search__result">
-                      <div class="row">
-                        <div class="col-12 col-md-6">
-                          <div class="mc-default__card mc-default__card--v3 mc-default__card--bg">
-                            <div class="mc-default__header">
-                              <span class="label">CARTA A MARCELINO</span>
-                            </div>
-                            <div class="mc-default__body">
-                              <p>Sr. Etienne-François Clérimbert - 15/09/1823</p>
-                            </div>
-                            <div class="mc-default__footer">
-                              <ul>
-                                <li><a href="instituto-fundador-escritos-single.html">Inglês</a></li>
-                                <li><a href="instituto-fundador-escritos-single.html">Espanhol</a></li>
-                                <li><a href="instituto-fundador-escritos-single.html">Francês</a></li>
-                              </ul>
-                            </div>
+                    <div class="mc-single__content">
+                      <p>
+                        Etienne-François de Clérimbert era o Prefeito de St. Symphorien-le-Château, pequena localidade
+                        entre St. Etienne e Lião.
+                        Quando decidiu abrir a escola primária municipal, recorreu aos “professores formados pelo
+                        coadjutor de La Valla”, dos quais obtivera boas referências. Os Irmãos já atuavam com sucesso em três escolas da região:
+                        Saint-Sauveur, Bourg-Argental e Tarentaise. Não temos a resposta escrita do Fundador, mas sabe-se que enviou dois
+                        Irmãos para a inspeção do local da futura escola e que o atendimemto foi rápido, pois a escola começou a
+                        funcionar no mês de novembro daquele ano. A localidade, hoje, tem o nome de Saint Symphorien-sur-Coise. O assunto expresso
+                        nesta carta é um pedido de Irmãos para a abertura de escolas, tema que se repetirá em muitas outras cartas dirigidas ao Pe. Champagnat.
+                      </p>
+                      <p>
+                        St.Symphorien-le-Château, 15 de setembro de 1823.
+                      </p>
+                      <p>
+                        Senhor: <br> Há tempo desejava estabelecer uma escola primária em St.
+                        Symphorien-le-Château. O prefeito departamental deu-me autorização para erigir uma escola. Tendo
+                        ouvido falar da vossa instituição, o bem que dela se diz nos faz desejar que os vossos Irmãos se estabeleçam na comuna.
+                        Asseguro-vos que a escola primária, dirigida pelos vossos Irmãos, será vista com prazer pela população.
+                      </p>
+                      <p>
+                        A comuna está autorizada a dar a soma de 400 francos, o alojamento e a mobília necessária para dois Irmãos. Vejo com pena que a
+                        soma é pouca coisa, mas temos a esperança de que muitos jovens estarão em condições de pagar, o que aumentará os vencimentos.
+                      </p>
+                      <p>
+                        Se fordes assaz generoso para prestar serviço aos habitantes de St. Symphorien com o envio de dois Irmãos para o
+                        primeiro ano, esperança temos de que, no próximo ano, contaremos com um terceiro. Faremos o possível para conservá-los; a
+                        comuna fará todos os sacrifícios necessários. Caso um dos dois seja apto a dirigir os alunos da aula mais adiantada,
+                        seria ainda melhor para a comuna. Ademais, senhor, confiamo-vos a decisão a respeito disso e ao sr. pároco, o qual vos
+                        escreverá para vos dizer o que nos convém. É essencial, se não houver inconvenientes, que envieis um Irmão para nos dizer o
+                        que será necessário no que toca à mobília dos Irmãos e ao tipo de estante que convenha aos alunos; com isso os Irmãos
+                        também conhecerão o local. Confio plenamente em vós; ficai certo, senhor, de que é com verdadeiro prazer que veremos a
+                        escola primária sob a vossa direção. Esperarei a vossa resposta para tomar qualquer determinação.
+                      </p>
+                      <p>
+                        Recebei, vo-lo rogo, a segurança da consideração muito distinta do vosso muito humilde e muito obediente servidor,
+                      </p>
+                      <p>
+                        CLERIMBERT, prefeito.
+                      </p>
+                    </div>
+                    <div class="mc-single__nav">
+                      <div class="mc-single__nav-l">
+                        <div class="mc-single__body">
+                          <p>Lorem ipsum dolor consect</p>
+                        </div><a href="" class="mc-single__link"><i class="fa fa-long-arrow-left"></i>VOLTAR</a>
+                      </div>
+                      <div class="mc-single__nav-r">
+                        <div class="mc-single__body">
+                          <p>Lorem ipsum dolor consect</p>
+                        </div><a href="" class="mc-single__link">AVANÇAR<i class="fa fa-long-arrow-right"></i></a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </article>
+            </div> <!-- end -->
+          </div>
+        </div>
+      </div> <!-- end -->
+    </section> <!-- end -->
+
+    <section class="mc-institute mc-institute--gray">
+      <div class="container">
+        <div class="row">
+          <div class="col-12">
+            <div id="sec2" class="mc-institute__section">
+              <div class="mc-institute__seealso">
+                <div class="row">
+                  <div class="col-12">
+                    <h2 class="main-title main-title--space30">VEJA TAMBEM</h2>
+                  </div>
+                  <div class="mc-institute__seealso-cards">
+                    <div class="row">
+                      <div class="col-12 col-md-6">
+                        <div class="mc-default__card mc-default__card--v3 mc-default__card--bg-white">
+                          <div class="mc-default__header">
+                            <span class="label">CARTA A MARCELINO</span>
+                          </div>
+                          <div class="mc-default__body">
+                            <p>Sr. Etienne-François Clérimbert - 15/09/1823</p>
+                          </div>
+                          <div class="mc-default__footer">
+                            <ul>
+                              <li><a href="instituto-fundador-escritos-single.html">Inglês</a></li>
+                              <li><a href="instituto-fundador-escritos-single.html">Espanhol</a></li>
+                              <li><a href="instituto-fundador-escritos-single.html">Francês</a></li>
+                            </ul>
                           </div>
                         </div>
-
-                        <div class="col-12 col-md-6">
-                          <div class="mc-default__card mc-default__card--v3 mc-default__card--bg">
-                            <div class="mc-default__header">
-                              <span class="label">CARTA A MARCELINO</span>
-                            </div>
-                            <div class="mc-default__body">
-                              <p>Gabriel Michel, fms | Romance Histórico, 2016</p>
-                            </div>
-                            <div class="mc-default__footer">
-                              <ul>
-                                <li><a href="">Inglês</a></li>
-                                <li><a href="">Espanhol</a></li>
-                                <li><a href="">Francês</a></li>
-                              </ul>
-                            </div>
+                      </div>
+                      <div class="col-12 col-md-6">
+                        <div class="mc-default__card mc-default__card--v3 mc-default__card--bg-white">
+                          <div class="mc-default__header">
+                            <span class="label">CARTA A MARCELINO</span>
+                          </div>
+                          <div class="mc-default__body">
+                            <p>Gabriel Michel, fms | Romance Histórico, 2016</p>
+                          </div>
+                          <div class="mc-default__footer">
+                            <ul>
+                              <li><a href="">Inglês</a></li>
+                              <li><a href="">Espanhol</a></li>
+                              <li><a href="">Francês</a></li>
+                            </ul>
                           </div>
                         </div>
-
-                        <div class="col-12 col-md-6">
-                          <div class="mc-default__card mc-default__card--v3 mc-default__card--bg">
-                            <div class="mc-default__header">
-                              <span class="label">CARTA A MARCELINO</span>
-                            </div>
-                            <div class="mc-default__body">
-                              <p>Gabriel Michel, fms | Romance Histórico, 2016</p>
-                            </div>
-                            <div class="mc-default__footer">
-                              <ul>
-                                <li><a href="">Inglês</a></li>
-                                <li><a href="">Espanhol</a></li>
-                                <li><a href="">Francês</a></li>
-                              </ul>
-                            </div>
+                      </div>
+                      <div class="col-12 col-md-6">
+                        <div class="mc-default__card mc-default__card--v3 mc-default__card--bg-white">
+                          <div class="mc-default__header">
+                            <span class="label">CARTA A MARCELINO</span>
+                          </div>
+                          <div class="mc-default__body">
+                            <p>Gabriel Michel, fms | Romance Histórico, 2016</p>
+                          </div>
+                          <div class="mc-default__footer">
+                            <ul>
+                              <li><a href="">Inglês</a></li>
+                              <li><a href="">Espanhol</a></li>
+                              <li><a href="">Francês</a></li>
+                            </ul>
                           </div>
                         </div>
                       </div>
                     </div>
                   </div>
                   <div class="col-12 text-center">
-                    <div class="mc-pagination">
-                      <div class="d-flex">
-                        <div class="mx-auto">
-                          <ul class="pagination pagination-lg">
-                            <li class="page-item disabled">
-                              <a class="page-link" href="#" tabindex="-1">
-                                <i class="fa fa-long-arrow-left"></i> VOLTAR
-                              </a>
-                            </li>
-                            <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1">1</a></li>
-                            <li class="page-item"><a class="page-link" href="#">2</a></li>
-                            <li class="page-item"><a class="page-link" href="#">3</a></li>
-                            <li class="page-item">
-                              <a class="page-link" href="#">
-                                AVANÇAR <i class="fa fa-long-arrow-right"></i>
-                              </a>
-                            </li>
-                          </ul>
-                        </div>
-                      </div>
-                    </div>
+                    <a class="btn btn-square" href="instituto-fundador.html">
+                      VEJA TODAS AS CARTAS<i class="fa fa-long-arrow-right"></i>
+                    </a>
                   </div>
                 </div>
               </div>
-            </div> <!-- end -->
+            </div>
           </div>
         </div>
-      </div> <!-- end -->
-    </section> <!-- end -->
+      </div>
+    </section>
+    <!--end -->
   </main> <!-- end -->
 
   <footer>
