--- a/instituto-marista.html
+++ b/instituto-marista.html
@@ -1224,10 +1224,10 @@
                     extraordinária.</p>
                     <div class="row">
                       <div class="col-12 col-md-6">
-                        <a class="btn btn-square btn-square--white" href="">CONTINUE LENDO<i class="fa fa-long-arrow-right"></i></a>
+                        <a class="btn btn-square btn-square--white" href="instituto-capitulos.html">CONTINUE LENDO<i class="fa fa-long-arrow-right"></i></a>
                       </div>
                       <div class="col-12 col-md-6">
-                        <a class="btn btn-square btn-square--white" href="">XXII CAPÍTULO GERAL 2017<i class="fa fa-long-arrow-right"></i></a>
+                        <a class="btn btn-square btn-square--white" href="instituto-capitulos.html">XXII CAPÍTULO GERAL 2017<i class="fa fa-long-arrow-right"></i></a>
                       </div>
                     </div>
                   </div>
