Add content and styles of ser marista irmãos espiritualidade

--- a/ser-marista.html
+++ b/ser-marista.html
@@ -715,7 +715,7 @@
                             tradição, a expressão “Recurso Habitual” traduz a plena confiança em Maria. O lema “Tudo a Jesus por Maria; tudo a Maria
                             para Jesus”, atribuído ao fundador por seus biógrafos, revela o estreito relacionamento entre filho e mãe, atitude de
                             confiança de Champagnat em Maria, atitude que somos convidados a viver (Água da Rocha, 25).</p>
-                            <a href="" class="mc-ser__spirit-block">
+                            <a href="ser-marista-irmaos-espiritualidade.html" class="mc-ser__spirit-block">
                               <div>
                                 <span>A Boa Mãe e a Virgem do Voto</span>
                                 <span>Reflexões sobre uma tradição iconográfica</span>
