Add content and styles of instituto capitulos nairobi

--- a/instituto-marista.html
+++ b/instituto-marista.html
@@ -1330,7 +1330,7 @@
                 lema “Maristas novos em missão”</p>
                 <div class="row">
                   <div class="col-12 col-md-6">
-                    <a href="" class="mc-institute__mission-button">
+                    <a href="instituto-capitulos-nairobi.html" class="mc-institute__mission-button">
                       <div>
                         NAIROBI, Quênia 2014
                         <span>Maristas novos em missão</span>
@@ -1339,7 +1339,7 @@
                     </a>
                   </div>
                   <div class="col-12 col-md-6">
-                    <a href="" class="mc-institute__mission-button">
+                    <a href="instituto-capitulos-mendes.html" class="mc-institute__mission-button">
                       <div>
                         MENDES, Brasil 2007
                         <span>Um coração, uma missão</span>
